<resources>
    <string name="app_name">Movie Finder</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="director">Director</string>
    <string name="box_office">Box Office</string>
    <string name="actor">Actor</string>
    <string-array name="genres">
        <item> Action </item>
        <item> Adventure </item>
        <item> Animation </item>
        <item> Comedy </item>
        <item> Crime </item>
        <item> Documentary </item>
        <item> Drama </item>
        <item> Family </item>
        <item> Fantasy </item>
        <item> History </item>
        <item> Horror </item>
        <item> Music </item>
        <item> Mystery </item>
        <item> Romance </item>
        <item> Science Fiction </item>
        <item> TV Movie </item>
        <item> Thriller </item>
        <item> War </item>
        <item> Western </item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="movie_finder">MOVIE FINDER</string>
    <string name="search">SEARCH</string>
</resources>
