<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1"
    tools:context=".Activity.MovieFinderActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/underline_background"
        android:elevation="4dp"
        android:theme="@style/MyStyle"
        app:titleTextAppearance="@style/MyStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="80dp">

            <LinearLayout
                android:id="@+id/titleSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/white"
                    android:padding="10dp"
                    android:src="@drawable/title_background" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="20dp"
                    android:background="@android:color/white"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/actorSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/white"
                    android:padding="10dp"
                    android:src="@drawable/actor_background" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="20dp"
                    android:background="@android:color/white"
                    android:text="@string/actor"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/genreSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/white"
                    android:padding="10dp"
                    android:src="@drawable/genre_background" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="20dp"
                    android:background="@android:color/white"
                    android:text="@string/genre"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/yearSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/white"
                    android:padding="10dp"
                    android:src="@drawable/year_background" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="20dp"
                    android:background="@android:color/white"
                    android:text="@string/year"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/directorSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/white"
                    android:padding="10dp"
                    android:src="@drawable/director_background" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="20dp"
                    android:background="@android:color/white"
                    android:text="@string/director"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/boxOfficeSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/white"
                    android:padding="10dp"
                    android:src="@drawable/box_office_background" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="20dp"
                    android:background="@android:color/white"
                    android:text="@string/box_office"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>